--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       --accent2: #1d4ed8;
       --danger: #ef4444;
       --ok: #10b981;
+      --today-glow: rgba(99,102,241,0.95);
     }
     *{ box-sizing:border-box }
 
@@ -142,6 +143,8 @@
       min-height: 110px;
       padding: 6px;
       position: relative;
+      transition: box-shadow .18s ease, transform .12s ease;
+      background-clip: padding-box;
     }
     .day-name {
       background: rgba(15,23,42,0.85);
@@ -151,10 +154,12 @@
     }
     .day {
       background:
-        radial-gradient(400px 160px at 80% 0%, rgba(59,130,246,.08), transparent 60%),
-        linear-gradient(180deg, rgba(255,255,255,0.015), transparent 30%);
+        radial-gradient(400px 160px at 80% 0%, rgba(59,130,246,.04), transparent 60%),
+        linear-gradient(180deg, rgba(255,255,255,0.012), transparent 30%);
+      border-radius: 8px;
+      margin: 6px;
     }
-    .day:hover { outline: 1px solid rgba(148,163,184,0.25) }
+    .day:hover { outline: 1px solid rgba(148,163,184,0.25); transform: translateY(-2px); box-shadow: 0 8px 20px rgba(0,0,0,.35) }
     .study-label,
     .exam-label{
       display: inline-block;
@@ -181,6 +186,21 @@
       display: none;
       white-space: pre-line;
       box-shadow: 0 8px 30px rgba(0,0,0,.4);
+    }
+
+    /* Estilo para el día actual: oscuro + borde brillante */
+    .day.today {
+      border: 2px solid var(--today-glow);
+      box-shadow: 0 8px 30px rgba(99,102,241,0.12), 0 0 18px rgba(99,102,241,0.08) inset;
+      transform: translateY(-4px);
+    }
+    .day.today .date-number {
+      color: #e6eefc;
+      font-weight: 700;
+      background: linear-gradient(90deg, rgba(255,255,255,0.02), rgba(255,255,255,0.04));
+      padding: 2px 6px;
+      border-radius: 6px;
+      border: 1px solid rgba(255,255,255,0.03);
     }
 
     /* ====== Agenda semanal (grilla) ====== */
@@ -300,7 +320,6 @@
           <!-- Botón ayuda -->
           <button class="btn" id="btnHelp" onclick="openHelpModal()" title="Cómo usar la página">❓ Ayuda</button>
           <!-- Botones principales -->
-          <button class="btn" onclick="openWeeklySummary()">📊 Resumen semanal</button>
           <button class="btn" onclick="openSubjectsModal()">🎨 Materias</button>
           <button class="btn tab-btn" id="btnAgenda" onclick="showAgenda()">🗓️ Agenda</button>
           <button class="btn tab-btn" id="btnExams" onclick="showExams()">📝 Parciales</button>
@@ -350,15 +369,6 @@
 
       <button id="saveBtn" onclick="saveStudy()">Guardar</button>
       <button class="cancel" onclick="closeModal()">Cancelar</button>
-    </div>
-  </div>
-
-  <!-- ===== Modal resumen semanal ===== -->
-  <div id="weeklyModal" class="modal">
-    <div class="modal-content">
-      <h3>Resumen semanal</h3>
-      <div id="weeklyList"></div>
-      <button class="cancel" onclick="closeWeeklyModal()">Cerrar</button>
     </div>
   </div>
 
@@ -434,6 +444,15 @@
   <div id="helpModal" class="modal">
     <div class="modal-content">
       <h3>Cómo usar esta página</h3>
+
+      <!-- Aviso para usuarios móviles (recomendación sitio de escritorio) -->
+      <div style="background:#1f2937; padding:.6rem; border-radius:8px; margin-bottom:.6rem; color:#f8fafc">
+        <strong>⚠️ Aviso:</strong>
+        <div style="margin-top:.35rem; color:#cfe3ff">
+          Si estás usando esta página desde un celular, te recomendamos activar la opción <em>“Sitio para computadoras”</em> (o "Ver como escritorio") en tu navegador para una mejor visualización.
+        </div>
+      </div>
+
       <div class="help-list" style="color:#e2e8f0; line-height:1.45">
         <ol>
           <li>
@@ -453,12 +472,15 @@
             Calendario separado para <em>exámenes</em>. Hacé clic en la fecha para cargar <em>materia, tema y observaciones</em>. No interfiere con el calendario de estudio.
           </li>
           <li>
-            <h4>Ver tu progreso (📊 Resumen semanal)</h4>
-            Muestra las <em>horas totales</em> estudiadas por semana acumuladas desde el inicio.
+            <h4>Gestión de materias</h4>
+            Recordá que las materias pueden editarse y eliminarse desde <strong>🎨 Materias</strong>. Si eliminás una materia, los registros existentes permanecerán pero la materia ya no aparecerá en la lista para seleccionar.
           </li>
         </ol>
       </div>
-      <button class="cancel" onclick="closeHelpModal()">Cerrar</button>
+      <div style="display:flex; gap:.5rem; margin-top:.6rem">
+        <button class="cancel" onclick="closeHelpModal()">Cerrar</button>
+        <button onclick="ackHelpClose()" style="background:linear-gradient(90deg,var(--accent1),var(--accent2));color:white;border-radius:8px;padding:.5rem .8rem;border:none">Entendido</button>
+      </div>
     </div>
   </div>
 
@@ -615,15 +637,36 @@
         days.appendChild(empty);
       }
 
+      // calcular 'today' local
+      const now = new Date();
+      const todayY = now.getFullYear();
+      const todayM = now.getMonth();
+      const todayD = now.getDate();
+
       for (let d = 1; d <= end.getDate(); d++) {
         const day = document.createElement('div');
         day.className = 'day';
-        day.textContent = d;
 
+        // Caja interna para poder formatear número separado
+        const num = document.createElement('div');
+        num.className = 'date-number';
+        num.style.position = 'absolute';
+        num.style.top = '8px';
+        num.style.left = '8px';
+        num.style.fontSize = '0.95rem';
+        num.textContent = d;
+        day.appendChild(num);
+
+        // Marcar si es hoy (solo si coincide con mes/año actual en vista)
+        if (todayY === currentDate.getFullYear() && todayM === currentDate.getMonth() && todayD === d) {
+          day.classList.add('today');
+        }
+
+        // Cargar registros de estudio (solo estudio en esta vista)
         const dateKey = `${currentDate.getFullYear()}-${String(currentDate.getMonth()+1).padStart(2,'0')}-${String(d).padStart(2,'0')}`;
         const records = JSON.parse(localStorage.getItem(dateKey) || '[]');
 
-        // SOLO ESTUDIO en el calendario de estudio
+        // === SOLO ESTUDIO en el calendario de estudio ===
         records.forEach(r => {
           const label = document.createElement('div');
           label.className = 'study-label';
@@ -637,9 +680,13 @@
           label.onmouseenter = () => tooltip.style.display = 'block';
           label.onmouseleave = () => tooltip.style.display = 'none';
 
+          // posicionarlo debajo del número
+          label.style.display = 'block';
+          label.style.marginTop = '26px';
           day.appendChild(label);
         });
 
+        // Click para abrir modal de estudio
         day.onclick = () => openModal(dateKey);
         days.appendChild(day);
       }
@@ -648,7 +695,8 @@
     function changeMonth(diff) {
       currentDate.setMonth(currentDate.getMonth() + diff);
       renderCalendar();
-      renderExamCalendar(); // sincronizar
+      // Mantener sincronizado el calendario de parciales
+      renderExamCalendar();
     }
 
     function openModal(dateKey) {
@@ -715,27 +763,6 @@
       localStorage.setItem(selectedDate, JSON.stringify(records));
       openModal(selectedDate); renderCalendar();
     }
-
-    function openWeeklySummary() {
-      const start = new Date(2025, 7, 4);
-      const today = new Date();
-      let week = 1; let html = ''; let cur = new Date(start);
-      while (cur <= today) {
-        let weekEnd = new Date(cur); weekEnd.setDate(weekEnd.getDate() + 6);
-        let totalMin = 0;
-        for (let d = new Date(cur); d <= weekEnd && d <= today; d.setDate(d.getDate() + 1)) {
-          const key = formatDateKey(d);
-          const records = JSON.parse(localStorage.getItem(key) || '[]');
-          records.forEach(r => totalMin += r.horas*60 + r.minutos);
-        }
-        let hh = Math.floor(totalMin / 60); let mm = totalMin % 60;
-        html += `<div>Semana ${week}: ${String(hh).padStart(2,'0')}:${String(mm).padStart(2,'0')} hrs</div>`;
-        week++; cur.setDate(cur.getDate() + 7);
-      }
-      document.getElementById('weeklyList').innerHTML = html || '<em>Sin datos</em>';
-      document.getElementById('weeklyModal').style.display = 'flex';
-    }
-    function closeWeeklyModal() { document.getElementById('weeklyModal').style.display = 'none'; }
 
     /********** ==== VISTA: AGENDA ==== **********/
     function ensureAgendaStructure(){
@@ -941,9 +968,6 @@
       closeExamModal(); renderExamCalendar(); renderCalendar();
     }
 
-    // (Opcional) Ayuda
-    function openExamHelp(){ alert('Calendario de Parciales: hacé click en un día para registrar materia, tema y observaciones. Se guarda por fecha y no afecta el calendario de estudio.'); }
-
     /********** ==== Materias (gestor) ==== **********/
     let subjectsMode = 'add';
     let editingSubjectIndex = -1;
@@ -1048,6 +1072,7 @@
     /********** ==== Ayuda ==== **********/
     function openHelpModal(){ document.getElementById('helpModal').style.display='flex'; }
     function closeHelpModal(){ document.getElementById('helpModal').style.display='none'; }
+    function ackHelpClose(){ closeHelpModal(); }
 
     /********** ==== Planes ==== **********/
     function openPlansModal(){ document.getElementById('plansModal').style.display='flex'; }
@@ -1056,13 +1081,34 @@
 
     /********** ==== Inicio ==== **********/
     // Cierre de modales al inicio
-    ['modal','weeklyModal','subjectsModal','agendaModal','examModal','helpModal','plansModal'].forEach(id=>{ document.getElementById(id).style.display = 'none'; });
+    ['modal','subjectsModal','agendaModal','examModal','helpModal','plansModal'].forEach(id=>{ document.getElementById(id).style.display = 'none'; });
 
     // Paleta sincronizada con input color
     document.getElementById('customColor').addEventListener('input', (e) => { selectedSwatchColor = e.target.value; renderSwatches(); });
 
+    // Conectar botones de pestañas (para visual activo)
+    document.getElementById('btnStudy').addEventListener('click', ()=>{ updateActiveTab('study'); });
+    document.getElementById('btnAgenda').addEventListener('click', ()=>{ updateActiveTab('agenda'); });
+    document.getElementById('btnExams').addEventListener('click', ()=>{ updateActiveTab('exams'); });
+
+    // Planes: clickable items (redirecciones)
+    // Los enlaces ya están en el HTML como <a>, pero para seguridad, ligar locks:
+    document.querySelectorAll('#plansModal .plan-item').forEach(item=>{
+      const text = item.textContent || '';
+      if(text.includes('Ingeniería Civil')){
+        // enlace disponible (ya en HTML)
+      }
+      if(text.includes('Ingeniería en Computación')){
+        // enlace disponible (ya en HTML)
+      }
+    });
+
     // Render inicial
     renderSubjectsSelect(); renderCalendar(); renderAgenda(); renderExamCalendar();
+
+    // Asegurar que el botón activo inicial sea "Estudio"
+    updateActiveTab('study');
+
   </script>
 </body>
 </html>
